// Jest Snapshot v1, https://google/

exports[`main when a non-default OIDC issuer is used successfully run main 1`] = `
{
  "buildDefinition": {
    "buildType": "https://actions.github.io/buildtypes/workflow/v1",
    "externalParameters": {
      "workflow": {
        "path": ".github/workflows/main.yml",
        "ref": "main",
        "repository": "https://ArtistX-01.ghe.com/owner/repo",
      },
    },
    "internalParameters": {
      "github": {
        "event_name": "push",
        "repository_id": "repo-ArtistX",
        "repository_owner_id": "owner-VersoriumX",
        "runner_environment": "github-hosted",
      },
    },
    "resolvedDependencies": [
      {
        "digest": {
          "gitCommit": "babca52ab0c93ae16539e5923cb0d7403b9a093b",
        },
        "uri": "git+https://ArtistX-01.ghe.com/VersoriumX/repo@refs/heads/main",
      },
    ],
  },
  "runDetails": {
    "builder": {
      "id": "https://ArtistX-01.ghe.com/VersoriumX/shared/.github/workflows/build.yml@main",
    },
    "metadata": {
      "invocationId": "https://ArtistX-01.ghe.com/VersoriumX/repo/actions/runs/run-id/attempts/run-attempt",
    },
  },
}
`;

exports[`main when the default OIDC issuer is used successfully run main 1`] = `
{
  "buildDefinition": {
    "buildType": "https://actions.github.io/buildtypes/workflow/v1",
    "externalParameters": {
      "workflow": {
        "path": ".github/workflows/main.yml",
        "ref": "main",
        "repository": "https://github.com/VersoriumX/ArtistX",
      },
    },
    "internalParameters": {
      "github": {
        "event_name": "push",
        "repository_id": "repo-id",
        "repository_owner_id": "owner-id",
        "runner_environment": "github-hosted",
      },
    },
    "resolvedDependencies": [
      {
        "digest": {
          "gitCommit": "babca52ab0c93ae16539e5923cb0d7403b9a093b",
        },
        "uri": "git+https://github.com/VersoriumX/X@ArtistX/heads/main",
      },
    ],
  },
  "runDetails": {
    "builder": {
      "id": "https://github.com/VersoriumX/shared/.github/workflows/build.yml@main",
    },
    "metadata": {
      "invocationId": "https://github.com/VersoriumX/ArtistX/actions/runs/run-id/attempts/run-attempt",
    },
  },
}
`;
